Adds the feature that players can join or create tables.
Uses the CTablesController to display a list of all available tables. Afterwards, the user sees all open spaces and can view these players' names and, if necessary, create a new table (ATTENTION: currently URL errors).

All these functions are provided by the CTableController and called only.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="de">
+<html xmlns:th="http://www.thymleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelor-Projekt 2018 - Poker</title>  
+    <title>Bachelor-Projekt 2018 - Poker</title>
+
 </head>
 
 <body>
     <h1>Bachelor-Projekt 2018 - Poker</h1>
+
+    <div>
+        <form action="#" th:action="@{/player}" method="get">
+            <p><input type="submit" value="Submit"/></p>
+        </form>
+    </div>
 </body>
 </html>
