--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <script src="/app.js"></script>
+    <script src="/player.js"></script>
 
 </head>
 
@@ -46,10 +46,10 @@
                 <table id="conversation" class="table table-striped">
                     <thead>
                     <tr>
-                        <th>Greetings</th>
+                        <th>Tables</th>
                     </tr>
                     </thead>
-                    <tbody id="greetings">
+                    <tbody id="tables">
                     </tbody>
                 </table>
             </div>
