--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,9 +40,9 @@
                 </form>
             </div>
         </div>
-        <div class="row">
+        <div id="tableContainer">
             <div class="col-md-12">
-                <table id="conversation" class="table table-striped">
+                <table id="tableTable" class="table table-striped">
                     <thead>
                     <tr>
                         <th>Tables</th>
