--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,15 +42,7 @@
         </div>
         <div id="tableContainer">
             <div class="col-md-12">
-                <table id="tableTable" class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Tables</th>
-                    </tr>
-                    </thead>
-                    <tbody id="tables">
-                    </tbody>
-                </table>
+                <ul id="spiele"></ul>
             </div>
         </div>
     </div>
