Implementiert eine token-basierte Anmeldung
Nach dem Erstellen bzw. Beitreten eines Tisches wird ein Token erzeugt, welcher Zusammen mit Tisch, Spieler und einem Timestamp gespeichert wird. Öffnet der User nun eine Websocket-Connection werden Tisch und Spieler anhand der "zurückgesendeten" UUID ermittelt und die Verbindung der SessionId, des Tisches und des Spielers kann erfolgen.

Gleichzeitig wird ständig anhand des Timestamps geschaut, ob die UUID schon länger als 5 min existiert. Ist dies der Fall wird diese gelöscht.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,23 +20,17 @@
         enabled. Please enable
         Javascript and reload this page!</h2></noscript>
     <div id="main-content" class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label for="connect">WebSocket connection:</label>
-                        <button id="connect" class="btn btn-default" type="submit">Connect</button>
-                        <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect</button>
-                    </div>
-                </form>
-            </div>
             <div class="col-md-6">
                 <form class="form-inline">
                     <div class="form-group">
                         <label for="name">What is your name?</label>
                         <input type="text" id="name" class="form-control" placeholder="Your name here...">
                     </div>
-                    <button id="send" class="btn btn-default" type="submit">Send</button>
+                    <div class="form-group">
+                        <label for="tablename">The name of the table you want to create.</label>
+                        <input type="text" id="tablename" class="form-control" placeholder="Table name here...">
+                    </div>
+                    <button id="createTable" class="btn btn-default" type="submit">Tisch erstellen</button>
                 </form>
             </div>
         </div>
