--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
                         <label for="tablename">The name of the table you want to create.</label>
                         <input type="text" id="tablename" class="form-control" placeholder="Table name here...">
                     </div>
-                    <button id="createTable" class="btn btn-default" type="submit">Tisch erstellen</button>
+                    <button id="createTable" class="btn btn-default" type="button">Tisch erstellen</button>
                 </form>
             </div>
         </div>
