--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
-<div id="main-content" class="container">
+<div id="main-content" class="container-fluid">
     <div class="form-group">
         <label for="name">What is your name?</label>
         <input type="text" id="name" class="form-control" placeholder="Your name here...">
