--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,24 +15,31 @@
 </head>
 
 <body>
-<h1>Bachelor-Projekt 2018 - Poker</h1>
-
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
+
 <div id="main-content" class="container-fluid">
-    <div class="form-group">
-        <label for="name">What is your name?</label>
-        <input type="text" id="name" class="form-control" placeholder="Your name here...">
+    <h1>Bachelor-Projekt 2018 - Poker</h1>
+
+    <div class="col-xl-4">
+        <div class="form-group">
+            <label for="name">What is your name?</label>
+            <input type="text" id="name" class="form-control" placeholder="Your name here...">
+        </div>
     </div>
-    <div class="form-group">
-        <label for="tablename">The name of the table you want to create.</label>
-        <input type="text" id="tablename" class="form-control" placeholder="Table name here...">
+
+    <div class="col-xl-4">
+        <div class="form-group">
+            <label for="tablename">The name of the table you want to create.</label>
+            <input type="text" id="tablename" class="form-control" placeholder="Table name here...">
+        </div>
     </div>
+
     <button id="createTable" class="btn btn-primary" type="button">Tisch erstellen</button>
     </form>
     <div id="tableContainer">
-        <div class="col-md-12">
+        <div class="col-xl-8">
             <ul id="spiele"></ul>
         </div>
     </div>
